--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "author": "max ogden",
   "license": "BSD",
   "dependencies": {
+    "concat-stream": "^1.4.6",
     "csv-parser": "^1.2.2",
     "csv-write-stream": "^0.2.0",
-    "ldjson-stream": "^1.1.0",
     "minimist": "^0.2.0",
-    "through": "^2.3.4",
-    "tuple-stream": "0.0.2"
+    "through2": "^0.5.1"
   },
   "directories": {
     "test": "test"
